--- a/CSS - Intermediario/Media Queries/index.html
+++ b/CSS - Intermediario/Media Queries/index.html
@@ -30,9 +30,9 @@
         }
 
         li{
-            display: inline-block;
+            float: left;
             color: white;
-            margin-right: 15px;
+            margin-left: 15px;
         }
 
         .logo{
@@ -40,8 +40,25 @@
             color: white;
         }
 
-        @media screen and (max-width: 400px) {
-            
+        @media screen and (max-width: 700px) {
+            .logo{
+                float: none;
+                text-align: center;
+            }
+
+            .menu{
+                margin-top: 20px;
+                float: none;
+                text-align: center;
+            }
+
+            .li{
+                float:none;
+                margin-bottom: 5px;
+            }
+            .header{
+                background-color: black;
+            }
         }
 
     </style>
@@ -57,6 +74,7 @@
             <li>Home</li>
             <li>Cursos</li>
             <li>Contato</li>
+            <li>Escritorios</li>
         </ul>
     </div>
     
